update bg color

--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ html {
 body {
   overflow-x: clip;
   max-width: 100vw;
-  background-color: #fbf7fd;
+  background-color: #f6eefa;
 }
 
 .a-heavy {
