--- a/src/components/user/user.css
+++ b/src/components/user/user.css
@@ -91,8 +91,25 @@
     color: var(--main-color);
 }
 
+.login__container small {
+    cursor: pointer;
+}
+
+.login__container small:hover {
+    color: var(--main-color);
+}
+
 .registerBtn {
     width: 100%;
     display: flex;
     gap: 5px;
+}
+
+.registerBtn span {
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.registerBtn:hover span {
+    color: var(--main-color);
 }
