--- a/src/components/destcard/destcard.css
+++ b/src/components/destcard/destcard.css
@@ -31,7 +31,7 @@
   display: flex;
   flex: 1;
   height: 300px;
-  min-width: 360px;
+  min-width: 300px;
 }
 
 .face {
@@ -161,4 +161,10 @@
   justify-content: center;
   flex-direction: column;
   color: white;
+}
+
+@media (width < 766px) {
+  .card {
+    width: 360px;
+  }
 }
