--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -14,9 +14,8 @@
 }
 
 .maindestinations_grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   padding-top: 2rem;
   padding-bottom: 2rem;
   gap: 1rem;
@@ -135,7 +134,7 @@
   padding-top: 3rem;
 }
 
-@media (width < 500px) {
+/* @media (width < 500px) {
   .maindestinations_content {
     padding-left: 10px;
     padding-right: 10px;
@@ -159,4 +158,4 @@
   .maindestinations_card {
     height: 375px;
   }
-}
+} */
