--- a/src/pages/home/sections/toptours/toptours.css
+++ b/src/pages/home/sections/toptours/toptours.css
@@ -23,9 +23,8 @@
 }
 
 .toptours_grid {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
   gap: 1rem;
   margin-top: 3rem;
@@ -35,6 +34,8 @@
 .toptours_card-item {
   flex-basis: 349px;
   min-height: 360px;
+  min-width: 300px;
+  border-radius: 8px;
 }
 
 .toptours_card {
