--- a/src/pages/home/sections/maindestinations/maindestinations.css
+++ b/src/pages/home/sections/maindestinations/maindestinations.css
@@ -6,6 +6,8 @@
 .maindestinations_content {
   height: auto;
   padding-top: 4rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .maindestinations_header {
